Added nav-bar target

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   text-align: center;
 }
 
+.nav-bar {
+  width: 100% !important;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +43,8 @@
 
 .read-the-docs {
   color: #888;
+}
+
+body {
+  width: 100%;
 }
