--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
   padding: 2rem;
   text-align: center;
 }
@@ -47,4 +46,9 @@
 
 body {
   width: 100%;
+}
+
+img {
+  width: 500px;
+  height: auto;
 }
